Archive2/bc/0ddcfc8466cd66/main.cpp
void func(char *) {
    
}

int main() {
    char arr[8];
    char (*arp)[8] = &arr;
    func(arp);
}
